--- a/linux/wofi/theme_configs/onedark-pro.css
+++ b/linux/wofi/theme_configs/onedark-pro.css
@@ -1,22 +1,22 @@
-@define-color bg0_hard #1d2021;
-@define-color bg0 #282828;
-@define-color bg0_soft #32302f;
-@define-color bg1 #3c3836;
-@define-color bg2 #504945;
-@define-color bg3 #665c54;
-@define-color bg4 #7c6f64;
-@define-color fg0 #fbf1c7;
-@define-color fg1 #ebdbb2;
-@define-color fg2 #d5c4a1;
-@define-color fg3 #bdae93;
-@define-color fg4 #a89984;
-@define-color red #fb4934;
-@define-color green #b8bb26;
-@define-color yellow #fabd2f;
-@define-color blue #83a598;
-@define-color purple #d3869b;
-@define-color aqua #8ec07c;
-@define-color orange #fe8019;
+
+@define-color    bg0_h     #3F4451;
+@define-color    bg0       #282C34;
+@define-color    bg1       #D7DAE0;
+@define-color    bg2       #ABB2BF;
+@define-color    bg3       #4F5666;
+@define-color    bg4       #7C6F64;
+@define-color    fg0       #ABB2BF;
+@define-color    fg1       #D7DAE0;
+@define-color    fg2       #E6E6E6;
+@define-color    fg3       #ABB2BF;
+@define-color    fg4       #D7DAE0;
+@define-color    red       #E06C75;
+@define-color    green     #98C379;
+@define-color    yellow    #D19A66;
+@define-color    blue      #61AFEF;
+@define-color    purple    #C678DD;
+@define-color    aqua      #56B6C2;
+@define-color    orange    #D19A66;
 
 * {
   font-family: 'Inconsolata Nerd Font', monospace;
@@ -27,7 +27,7 @@
 window {
   margin: 0px;
   padding: 10px;
-  border: 0.16em solid @fg1;
+  border: 0.16em solid @fg4;
   border-radius: 0.1em;
   background-color: @bg0;
   animation: slideIn 0.5s ease-in-out both;
@@ -36,10 +36,11 @@ window {
 /* Slide In */
 @keyframes slideIn {
   0% {
-    opacity: 0;
+     opacity: 0;
   }
+
   100% {
-    opacity: 1;
+     opacity: 1;
   }
 }
 
@@ -55,10 +56,11 @@ window {
 /* Fade In */
 @keyframes fadeIn {
   0% {
-    opacity: 0;
+     opacity: 0;
   }
+
   100% {
-    opacity: 1;
+     opacity: 1;
   }
 }
 
@@ -90,12 +92,12 @@ window {
 }
 
 #input image {
-  border: none;
-  color: @red;
+    border: none;
+    color: @red;
 }
 
 #input * {
-  outline: 4px solid @red !important;
+  outline: 4px solid @red!important;
 }
 
 /* Text */
@@ -112,12 +114,12 @@ window {
 
 #entry arrow {
   border: none;
-  color: @fg1;
+  color: @fg4;
 }
 
 /* Selected Entry */
 #entry:selected {
-  border: 0.11em solid @fg1;
+  border: 0.11em solid @fg4;
 }
 
 #entry:selected #text {
@@ -125,6 +127,5 @@ window {
 }
 
 #entry:drop(active) {
-  background-color: @fg1 !important;
+  background-color: @fg4!important;
 }
-
