--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -5,7 +5,6 @@
  *
  */
 
-/* OneDark Pro Colors */
 @define-color bg0_hard #3F4451;   /* Background (dark) */
 @define-color bg0 #282C34;        /* Background */
 @define-color bg0_soft #4F5666;   /* Inactive background */
@@ -24,44 +23,31 @@
 @define-color aqua #56B6C2;       /* Cyan */
 @define-color orange #D19A66;     /* Orange */
 
-/* Global styles */
 * {
-  font-family: 'CaskaydiaCove Nerd Font', 'Caskaydia Code', 'Material Design Icons', 'NerdFonts', 'FontAwesome', sans-serif;
-  font-size: 13px;
+  font-family: 'Maple Mono NF:style=Bold';
+  font-size: 11px;
+  min-height: 0;
+  border-radius: 0;
+  border: none;
 }
 
-/* Module Styles */
 .modules-left {
-  /* margin: 4px; */
-  padding: 0px 2px;
-  /* background-color: rgba(79, 86, 102, 0.5); */
   background-color: rgba(40, 40, 40, 0);
-  /* border-radius: 0rem 2rem 2rem 0rem; */
   border-radius: 2rem;
 }
 
 .modules-right {
-  /* margin: 4px; */
-  padding: 0px 2px;
-  /* background-color: rgba(79, 86, 102, 0.5); */
   background-color: rgba(40, 40, 40, 0);
-  /* border-radius: 2rem 0rem 0rem 2rem; */
   border-radius: 2rem;
 }
 
 .modules-center {
-  /* margin: 4px; */
-  /* padding: 3px; */
-  padding: 0px 2px;
   border-radius: 2rem;
   background-color: rgba(40, 40, 40, 0);
 }
 
 window#waybar {
-  /* OneDark Pro background */
-  background-color: rgba(40, 44, 52, 0.80);
-  /* background-color:transparent; */
-  /* color: transparent;  */
+  background-color: rgba(0, 0, 0, 0.45);  
   transition-property: background-color;
   transition-duration: 0.25s;
 }
@@ -71,17 +57,11 @@ window#waybar.hidden {
 }
 
 window#waybar.empty {
-/* OneDark Pro background */
-  background-color: rgba(40, 44, 52, 0.60);  
-  /* color: rgba(40, 44, 52, 0.80);   */
-  /* background-color: transparent; */
+  background-color: rgba(0, 0, 0, 0.45);  
 }
 
-/* Workspaces */
 #workspaces {
-  /* margin: 4px; */
-  /* padding: 2px; */
-  background-color: rgba(63, 68, 81, 0.0);  /* OneDark Pro inactive tab background */
+  background-color: rgba(63, 68, 81, 0.0); 
   border-radius: 1rem;
 }
 
@@ -104,7 +84,6 @@ window#waybar.empty {
   color: @red;
 }
 
-/* Modules */
 #mode {
   background-color: transparent;
 }
@@ -123,10 +102,10 @@ window#waybar.empty {
 #mode,
 #idle_inhibitor,
 #mpd {
-  border-radius: 2rem;
-  padding-left: 8px;
-  padding-right: 8px;
-  margin: 2px;
+  /* border-radius: 2rem; */
+  padding-left: 4px;
+  padding-right: 4px;
+  margin: 4px;
   color: @fg1;
 }
 
@@ -134,23 +113,22 @@ window#waybar.empty {
   margin: 4px;
   background-color: transparent;
   border-radius: 2rem;
-  padding-left: 8px;
-  padding-right: 8px;
+  /* padding-left: 8px; */
+  /* padding-right: 8px; */
 }
 
 window#waybar.empty #window {
   background-color: transparent;
 }
 
-/* Individual module customizations */
 #clock {
-  padding-top: 1px;
+  /* padding-top: 1px; */
   background-color: transparent;
 }
 
 #battery {
   background-color: rgba(0, 0, 0, 0);
-  padding-top: 2px;
+  /* padding-top: 2px; */
 }
 
 #battery.charging,
@@ -181,12 +159,10 @@ label:focus {
 }
 
 #cpu {
-  padding-top: 1px;
   background-color: transparent;
 }
 
 #memory {
-  padding-top: 2px;
   background-color: transparent;
 }
 
@@ -199,35 +175,29 @@ label:focus {
 }
 
 #network {
-  padding-top: 2px;
-  margin-right: 4px;
   background-color: transparent;
+
 }
 
 #network.disconnected {
-  padding-top: 2px;
+  /* padding-top: 2px; */
   background-color: @red;
   color: @bg0;
 }
 
 #pulseaudio {
   background-color: transparent;
-  color: @blue;
-  padding-top: 2px;
-  margin-right: 4px;
 }
 
 #pulseaudio.muted {
   background-color: transparent;
   color: @soft_red;
-  padding-top: 2px;
-  margin-right: 4px;
 }
 
 #custom-media {
   background-color: @green;
   color: @bg0;
-  min-width: 100px;
+  /* min-width: 100px; */
 }
 
 #custom-media.custom-spotify {
