--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -25,7 +25,7 @@
 
 * {
   font-family: 'Maple Mono NF:style=Bold';
-  font-size: 11px;
+  font-size: 12px;
   min-height: 0;
   border-radius: 0;
   border: none;
@@ -78,10 +78,14 @@ window#waybar.empty {
 
 #workspaces button.focused {
   color: @blue;
+  border-bottom: 2px solid @bg3;
+  background-color:rgba(40, 44, 52, 1.0);
+  /* background-color: rgba(63, 68, 81, .90);  */
 }
 
 #workspaces button.urgent {
   color: @red;
+  border-bottom: 2px solid @red;
 }
 
 #mode {
@@ -105,12 +109,18 @@ window#waybar.empty {
   /* border-radius: 2rem; */
   padding-left: 4px;
   padding-right: 4px;
-  margin: 4px;
+  margin-left: 4px;
+  margin-right: 4px;
+  margin-top: 2px;
+  margin-bottom: 2px;
   color: @fg1;
 }
 
 #window {
-  margin: 4px;
+  margin-left: 4px;
+  margin-right: 4px;
+  margin-top: 2px;
+  margin-bottom: 2px;
   background-color: transparent;
   border-radius: 2rem;
   /* padding-left: 8px; */
@@ -180,7 +190,6 @@ label:focus {
 }
 
 #network.disconnected {
-  /* padding-top: 2px; */
   background-color: @red;
   color: @bg0;
 }
